--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
